# BankServices

./: .gitignore
api/: Cargo.toml
api/src/: main.rs  routes.rs  tests.rs
api/src/handlers/: auth_handler.rs  mod.rs  orders_handler.rs  products_handler.rs  tasks_handler.rs
api/src/models/: auth.rs  mod.rs  orders.rs  products.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: error.jsx  globals.css  layout.jsx  loading.jsx  not-found.jsx  page.jsx
frontend/src/app/admin/: layout.jsx
frontend/src/app/api/: apiAuth.jsx  apiOrders.jsx  apiProducts.jsx  apiTasks.jsx
frontend/src/app/auth/: page.jsx
frontend/src/app/client/: page.jsx
frontend/src/app/products/: page.jsx
frontend/src/components/: donutChart.jsx  login.jsx  register.jsx  sidebar.jsx  signUpButton.jsx
frontend/src/components/auth/: login.jsx  register.jsx
services/: Cargo.toml  sort_products  sort_products.rs
services/EmailSenderService/: EmailSenderServer.rs
services/EmailSenderService/src/: modules.rs
services/OrderService/: Cargo.toml
services/OrderService/src/: create_order.rs  delete_order.rs  main.rs  modules.rs  read_all_orders.rs  read_order.rs  server_config.rs  test.rs  update_product.rs
services/ProductOperationService/: Cargo.toml  ProductService.rs  modules.rs  server_config.rs
services/ProductOperationService/src/: create_order.rs  delete_order.rs  logger.rs  main.rs  modules.rs  read_all_products.rs  remove_product.rs  server_config.rs  sort_products.rs  update_product.rs
services/auth/: Cargo.toml
services/auth/src/: db.rs  handlers.rs  main.rs  models.rs  musorka  tests.rs
services/crud + email/: create_product — копия.rs  read_product — копия.rs
services/mail_send/: Cargo.toml
services/mail_send/src/: main.rs  send_email_service
services/products/: Cargo.toml
services/src/: logger.rs  main.rs  modules.rs  read_all_products.rs  send_email_service.rs  tests.rs
services/tasks/: package-lock.json  package.json  tsconfig.json
services/tasks/config/: db.ts
services/tasks/src/: index.ts
services/tasks/test/: task.test.ts
(+18 files in other folders)
