[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
log = "0.4"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = "0.15.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"