[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0.86"
actix-web = "4.8.0"
actix-cors = "0.7.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres"] }
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
actix-rt = "2.10.0"
jsonwebtoken = "9.0"