[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[env]
RUST_BACKTRACE = "0"

[dependencies]
aqueiralibrary = "0.1.1"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.61"
reqwest = "0.12.4"
hyper = "1.3.1"
chrono = "0.4.38"
anyhow = "1.0.86"
serde_json = "1.0.117"
serde = "1.0.203"
actix-web = "4.7.0"
actix-rt = "2.10.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres"] }
lettre = { version = "0.11.7", features = ["default"] }
bytes = "1.6.0"
dotenv = "0.15.0"
http = "1.1.0"
actix-cors = "0.7.0"