[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
rusqlite = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
reqwest = "0.12.5"
sqlx = "0.7.4"
anyhow = "1.0.86"